...
    android:layout_height="70dp"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:background="@drawable/gradient_box"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_name"
        android:textSize="16sp"
        android:layout_centerVertical="true"
        android:layout_marginLeft="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

...
